apps/base/logging-promtail/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging-promtail
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
